<resources>
    <string name="app_name">LoginForm</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="client_id">ae5586293c8f4cb394f1e31f0ef78e42</string>
    <string name="redirect_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="home">home</string>
    <string name="me">m</string>
    <string name="profile">profile</string>
    <string name="inbox">inbox</string>
    <string name="match">match</string>

    ///top nav for table
    <string name="Club">Club</string>
    <string name="MP">MP</string>
    <string name="W">W</string>
    <string name="L">L</string>
    <string name="D">D</string>
    <string name="P">P</string>

    // spinner content
    <string-array name="season">
        <item>current season</item>
        <item>last season</item>
    </string-array>

    <string name="matchday_subtitle">Matchday %d</string>

</resources>
